-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b131
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8197256 | 8u192 | Thomas Schatzl | P4 | Resolved | Fixed | b01 |
| JDK-8195261 | 8u172 | Thomas Schatzl | P4 | Resolved | Fixed | b03 |
| JDK-8190027 | 8u162 | Thomas Schatzl | P4 | Resolved | Fixed | b04 |
| JDK-8183650 | 8u161 | Thomas Schatzl | P4 | Resolved | Fixed | b01 |
| JDK-8171480 | 8u152 | Thomas Schatzl | P4 | Resolved | Fixed | b01 |
| JDK-8175146 | 8u151 | Thomas Schatzl | P4 | Resolved | Fixed | b01 |
| JDK-8185184 | 8u144 | Thomas Schatzl | P4 | Resolved | Fixed | b31 |
| JDK-8177169 | 8u141 | Unassigned | P4 | Resolved | Fixed | b01 |
| JDK-8174020 | 8u131 | Thomas Schatzl | P4 | Resolved | Fixed | b06 |
| JDK-8175902 | 8u121 | Thomas Schatzl | P4 | Closed | Fixed | b34 |
| JDK-8192173 | emb-8u161 | Thomas Schatzl | P4 | Resolved | Fixed | b01 |
| JDK-8184490 | emb-8u151 | Unassigned | P4 | Resolved | Fixed | b01 |
| JDK-8178561 | emb-8u141 | Unassigned | P4 | Resolved | Fixed | b01 |
| JDK-8174181 | emb-8u131 | Thomas Schatzl | P4 | Resolved | Fixed | b06 |
| JDK-8180961 | openjdk7u | Thomas Schatzl | P4 | Resolved | Fixed | master |
The cached value could also be use by the os::print_cpu_info, and other routines, that want to report cpu information but may be called in a crash context and so are limited in what they attempt to do. In particular they report the number of configured processors (processor_count()) not the number of available processors (active_processor_count()), because the former is an unchanging value cached at system initialization, while the latter requires system calls that make not be possible in a crash context.
- backported by
-
JDK-8171480 Cache initial active_processor_count
-
- Resolved
-
-
JDK-8174020 Cache initial active_processor_count
-
- Resolved
-
-
JDK-8174181 Cache initial active_processor_count
-
- Resolved
-
-
JDK-8175146 Cache initial active_processor_count
-
- Resolved
-
-
JDK-8177169 Cache initial active_processor_count
-
- Resolved
-
-
JDK-8178561 Cache initial active_processor_count
-
- Resolved
-
-
JDK-8180961 Cache initial active_processor_count
-
- Resolved
-
-
JDK-8183650 Cache initial active_processor_count
-
- Resolved
-
-
JDK-8184490 Cache initial active_processor_count
-
- Resolved
-
-
JDK-8185184 Cache initial active_processor_count
-
- Resolved
-
-
JDK-8190027 Cache initial active_processor_count
-
- Resolved
-
-
JDK-8192173 Cache initial active_processor_count
-
- Resolved
-
-
JDK-8195261 Cache initial active_processor_count
-
- Resolved
-
-
JDK-8197256 Cache initial active_processor_count
-
- Resolved
-
-
JDK-8175902 Cache initial active_processor_count
-
- Closed
-
- blocks
-
JDK-8161993 G1 crashes if active_processor_count changes during startup
-
- Resolved
-
- relates to
-
JDK-8149331 Re-examine G1 use of os::processor_count
-
- Closed
-
-
JDK-8179084 HotSpot VM fails to start when AggressiveHeap is set
-
- Closed
-
-
JDK-8147905 Verify all uses of os::processor_count()
-
- Closed
-
-
JDK-8166105 Runtime.availableProcessors() ignores Linux taskset command
-
- Resolved
-