8147910: Cache initial active_processor_count

Introduce and initialize active_processor_count variable in VM.

Reviewed-by: dholmes, jprovino